# OpenNMT-Tokenizer

./: CMakeLists.txt
cli/: CMakeLists.txt
cmake/: Config.cmake.in
include/onmt/: Tokenizer.h
src/: ITokenizer.cc  Tokenizer.cc
src/unicode/: Unicode.cc
